feat: Add auth code, per-user config, and terms image

--- a/index.html
+++ b/index.html
@@ -17,22 +17,9 @@
             <h1 class="title">Terms & Conditions</h1>
             <p class="subtitle">Please review our terms before proceeding.</p>
 
-            <div class="terms-box">
-                <h3>Web Development Service Terms</h3>
-                <p>1. <strong>Scope of Work:</strong> We agree to provide web development services as described in the
-                    project proposal. Any additional work will be charged separately.</p>
-                <p>2. <strong>Payment Terms:</strong> A deposit is required to commence work. Final payment is due upon
-                    project completion and before final delivery.</p>
-                <p>3. <strong>Timeline:</strong> We will make every effort to meet the agreed-upon timeline. However,
-                    delays caused by the client (e.g., late content submission) may extend the deadline.</p>
-                <p>4. <strong>Intellectual Property:</strong> Upon full payment, the client will own the rights to the
-                    website design and code. We retain the right to showcase the work in our portfolio.</p>
-                <p>5. <strong>Maintenance:</strong> Post-launch maintenance is not included unless specified in a
-                    separate agreement.</p>
-                <p>6. <strong>Limitation of Liability:</strong> We are not liable for any indirect, special, or
-                    consequential damages arising out of the use of the website.</p>
-                <p>7. <strong>Acceptance:</strong> By proceeding with the payment, you acknowledge that you have read,
-                    understood, and agreed to these terms.</p>
+            <div class="terms-box" style="text-align: center; padding: 20px;">
+                <img src="terms_content.png" alt="Terms Content"
+                    style="max-width: 100%; height: auto; border-radius: 8px;">
             </div>
 
             <div class="checkbox-container">
