--- a/pay.html
+++ b/pay.html
@@ -30,8 +30,11 @@
 
                 // Get amount from CONFIG if user exists, otherwise fallback to session storage or default
                 let amount = '1';
+                let userAuthCode = '1234'; // Default fallback code
+
                 if (currentUser && CONFIG.users[currentUser]) {
-                    amount = CONFIG.users[currentUser];
+                    amount = CONFIG.users[currentUser].amount;
+                    userAuthCode = CONFIG.users[currentUser].code;
                 } else {
                     amount = sessionStorage.getItem('paymentAmount') || '1';
                 }
@@ -53,14 +56,44 @@
 
                 // Set image source
                 document.getElementById('payment-qr').src = qrUrl;
+
+                function verifyPayment() {
+                    const enteredCode = document.getElementById('auth-code').value;
+                    const errorMsg = document.getElementById('auth-error');
+
+                    if (enteredCode === userAuthCode) {
+                        window.location.href = 'details.html';
+                    } else {
+                        errorMsg.style.display = 'block';
+                        // Shake animation
+                        const input = document.getElementById('auth-code');
+                        input.style.animation = 'none';
+                        input.offsetHeight; /* trigger reflow */
+                        input.style.animation = 'shake 0.5s';
+                    }
+                }
+
+                // Allow Enter key to submit
+                document.getElementById('auth-code').addEventListener('keypress', function (e) {
+                    if (e.key === 'Enter') {
+                        verifyPayment();
+                    }
+                });
             </script>
 
+            <div id="amount-display" class="amount-display"></div>
 
+            <div class="auth-section">
+                <p style="margin-bottom: 12px; color: var(--text-muted); font-size: 0.9rem;">Enter 4-digit Code to
+                    Proceed</p>
+                <input type="text" id="auth-code" maxlength="4" placeholder="0000" class="auth-input"
+                    oninput="this.value = this.value.replace(/[^0-9]/g, '')">
+                <p id="auth-error" class="error-msg" style="margin-top: 8px;">Invalid Code</p>
+            </div>
 
-            <a href="details.html" class="submit-btn"
-                style="margin-top: 15px; text-decoration: none; display: inline-block; text-align: center;">
+            <button onclick="verifyPayment()" class="submit-btn" style="margin-top: 24px;">
                 Proceed to Details
-            </a>
+            </button>
         </div>
     </div>
 </body>
