--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
             font-size: 0.9rem;
         }
     </style>
-    <script src="config.js"></script>
+    <script>document.write('<script src="config.js?v=' + Date.now() + '"><\/script>')</script>
     <script src="protect.js"></script>
 </head>
 
